--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ albumentations==1.3.1
 h5py==3.6.0
 keras==2.15.0
 lmdb==1.4.1
+matplotlib==3.4.3
 matplotlib==3.5.1
 numexpr==2.8.3
 numpy==1.21.2
@@ -12,6 +13,7 @@ pandas==1.3.5
 Pillow==10.1.0
 protobuf==3.20.3
 pytest==7.3.1
+pytorch_lightning
 PyYAML==6.0.1
 scikit_image==0.18.3
 scikit_learn==0.24.2
@@ -20,5 +22,5 @@ seaborn==0.13.0
 setuptools==65.3.0
 SharedArray==3.2.3
 tensorflow==2.14.0
-torch==2.0.1+cu117
+torch
 tqdm==4.65.0
