--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,10 @@ albumentations==1.3.1
 h5py==3.6.0
 keras==2.15.0
 lmdb==1.4.1
-matplotlib==3.4.3
-matplotlib==3.5.1
+matplotlib
 numexpr==2.8.3
 numpy==1.21.2
-opencv_contrib_python==4.7.0.68
-opencv_python==4.7.0.72
-opencv_python_headless==4.7.0.72
+opencv-python
 pandas==1.3.5
 Pillow==10.1.0
 protobuf==3.20.3
@@ -19,6 +16,7 @@ scikit_image==0.18.3
 scikit_learn==0.24.2
 scipy==1.11.3
 seaborn==0.13.0
+segmentation-models-pytorch
 setuptools==65.3.0
 SharedArray==3.2.3
 tensorflow==2.14.0
